# JobSystem

./: .gitignore  README.md
.github/workflows/: clang.yml  gnu.yml
JobSystem/: CMakeLists.txt  Configure.cmake  vcpkg.json  vcpkgSetup.cmake
JobSystem/Benchmarks/: CMakeLists.txt  FunctionCallBenchmark.cpp  ScalingBenchmark.cpp
JobSystem/JobSystem/: CMakeLists.txt  Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  JobSystemThread.cpp  JobSystemThread.h  main.cpp
JobSystem/JobSystem/Core/: InternalJob.cpp  InternalJob.h  JobSystem.cpp  JobSystem.h  JobSystemThread.cpp  JobSystemThread.h
JobSystem/JobSystem/JobSystem/: JobSystem.cpp  JobSystem.h  WorkerThread.cpp  WorkerThread.h
JobSystem/JobSystem/Tests/: Initialization.cpp  MultiJobs_Independend.cpp  SingleJob.cpp
JobSystem/Src/: CMakeLists.txt
JobSystem/Src/JobSystem/: AtomicMutex.h  Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  WorkerThread.cpp  WorkerThread.h
JobSystem/Tests/: CMakeLists.txt  Initialization.cpp  LargeJob.cpp  MultiJobs.cpp  MultiJobs_Independend.cpp  ParallelJob.cpp  ParallelJobs.cpp  SingleJob.cpp  Singleton.cpp  TestUtils.hpp  main.cpp
JobSystem/vcpkg/: custom-triplet.cmake.in
workflows/: clang.yml
